--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-image: url("../../assets/burger-cropped.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 25rem;
 }
 
