--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -6,6 +6,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 25rem;
+  border-bottom: 5px solid var(--color-yellow);
 }
 
 .SearchBar-sort-options ul {
@@ -64,8 +65,8 @@
 .SearchBar-submit a {
   border-radius: 4px;
   padding: 0.72rem 1.7rem;
-  background-color: #cca353;
-  color: #ffffff;
+  background-color: var(--color-yellow);
+  color: var(--color-bg);
   font-weight: 600;
   transition: background-color 0.5s;
 }
@@ -78,19 +79,19 @@
 @media only screen and (max-width: 560px) {
   .SearchBar {
   }
+}
 
-  .SearchBar-sort-options ul {
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
+.SearchBar-sort-options ul {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
 
-  .SearchBar-fields {
-    flex-direction: column;
-    align-items: center;
-  }
+.SearchBar-fields {
+  flex-direction: column;
+  align-items: center;
+}
 
-  .SearchBar-fields input {
-    margin-right: 0;
-    margin-bottom: 0.86rem;
-  }
+.SearchBar-fields input {
+  margin-right: 0;
+  margin-bottom: 0.86rem;
 }
