--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@ input:focus {
 h1 {
   padding: 0.66rem 0;
   text-align: center;
-  background-color: #cca353;
+  background-color: var(--color-yellow);
   font-family: Poppins, sans-serif;
   font-size: 1.8rem;
-  color: #fff;
+  color: var(--color-bg);
 }
